# adios2_examples

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/app1/: CMakeLists.txt  app1.F90  app2.cc  helloBPReader.cc  readMPIassem_f.F90  reader1d.cc  reader1d_f.F90  reader_f.F90  readwrite.cc  write1d_f.F90  writeMPIassem_f.F90  write_f.F90
examples/envscript/: envaimos.sh  envscorec.sh
examples/src/: CMakeLists.txt  helloInsituArgs.F90
